# Google_ADK_Chat

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: call-back.mdc
docs/: api.md  mcp_tool_development.md  prd.md
src/: __init__.py
src/core/: __init__.py  config.py  llm_client.py  logger.py
src/mcp_tools/: __init__.py  base.py  examples.py
src/web/: __init__.py  app.py
src/web/static/css/: style.css
src/web/static/js/: app.js
src/web/templates/: 404.html  500.html  index.html
tests/: __init__.py  test_config.py  test_mcp_tools.py
